--- a/packages/survey-angular-ui/src/components/file/choose-file.component.html
+++ b/packages/survey-angular-ui/src/components/file/choose-file.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-    <label *ngIf="!question.isReadOnly" tabindex="0" [class]="question.getChooseFileCss()"
+    <label tabindex="0" [class]="question.getChooseFileCss()"
         [attr.for]="question.inputId" [attr.aria-label]="question.chooseButtonText" [key2click]>
         <svg *ngIf="question.cssClasses.chooseFileIconId" [title]="question.chooseButtonText"
             [iconName]="question.cssClasses.chooseFileIconId" [size]="'auto'" sv-ng-svg-icon></svg>
