--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -1,12 +1,12 @@
 <script type="text/html" id="survey-question-signaturepad">
-    <div data-bind="css: question.cssClasses.root, style: { height: signatureHeight, width: signatureWidth }">
+    <div data-bind="css: question.cssClasses.root">
         <div data-bind="css: question.cssClasses.placeholder, visible: $data.needShowPlaceholder()">
             <!-- ko template: { name: 'survey-string', data: question.locPlaceholder } -->
             <!-- /ko -->
         </div>
-        <div>
+        <div class="sd-signaturepad__canvas-container">
             <!-- ko if: question.backgroundImage -->
-            <img data-bind="attr: { src: question.backgroundImage, width: question.signatureWidth, height: question.signatureHeight }, css: question.cssClasses.backgroundImage">
+            <img data-bind="attr: { src: question.backgroundImage }, css: question.cssClasses.backgroundImage">
             <!-- /ko -->
             <canvas tabindex='0' data-bind="css: question.cssClasses.canvas"></canvas>
         </div>
