--- a/src/signaturepad.scss
+++ b/src/signaturepad.scss
@@ -25,12 +25,14 @@
     width: 100%;
     height: 100%;
 }
-
-.sjs_sp_canvas,
+.sjs_sp_canvas {
+    position: relative;
+}
 .sjs_sp__background-image {
     position: absolute;
     top: 0;
     left: 0;
     object-fit: cover;
     width: 100%;
+    height: 100%;
 }
