--- a/src/knockout/components/svg-icon/svg-icon.html
+++ b/src/knockout/components/svg-icon/svg-icon.html
@@ -1,3 +1,3 @@
 <!-- ko if: hasIcon -->
-<svg class="sv-svg-icon" data-bind="css: css, attr: { 'aria-label': title }" role="img"><use></use></svg>
+<svg class="sv-svg-icon" data-bind="css: css" role="img"><use></use></svg>
 <!-- /ko -->
