--- a/src/knockout/templates/question-imagepicker.html
+++ b/src/knockout/templates/question-imagepicker.html
@@ -40,7 +40,7 @@
                   <!-- ko if: ($data.locImageLink.koRenderedHtml() && !$data.contentNotLoaded && question.contentMode === "video") -->
                   <video controls data-bind="css: question.cssClasses.image, attr: { src: $data.locImageLink.koRenderedHtml, width: question.renderedImageWidth, height: question.renderedImageHeight }, style: { objectFit: question.imageFit }, event: { loadedmetadata: question.onContentLoaded, error: $data.onErrorHandler }"></video>
                   <!-- /ko -->
-                  <!-- ko if: !$data.imageLink || $data.contentNotLoaded -->
+                  <!-- ko if: (!$data.locImageLink.koRenderedHtml() || $data.contentNotLoaded) -->
                   <div data-bind="css: question.cssClasses.itemNoImage, style: { width: question.renderedImageWidth, height: question.renderedImageHeight, objectFit: question.imageFit}">
                     <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.itemNoImageSvgIcon, iconName: question.cssClasses.itemNoImageSvgIconId, size: 48 } } --><!-- /ko -->
                   </div>
