--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -4,11 +4,11 @@
             <!-- ko template: { name: 'survey-string', data: question.locPlaceholder } -->
             <!-- /ko -->
         </div>
-        <div class="sd-signaturepad__canvas-container">
+        <div>
             <!-- ko if: question.backgroundImage -->
-            <img data-bind="attr: { src: question.backgroundImage, width: question.renderedWidth }, css: question.cssClasses.backgroundImage">
+            <img data-bind="attr: { src: question.backgroundImage}, style: { width: question.renderedWidth }, css: question.cssClasses.backgroundImage">
             <!-- /ko -->
-            <canvas tabindex='0' data-bind="css: question.cssClasses.canvas, style: { width: question.renderedWidth }" ></canvas>
+            <canvas tabindex='0' data-bind="css: question.cssClasses.canvas" ></canvas>
         </div>
         <!-- ko if: question.canShowClearButton -->
         <div data-bind="css: question.cssClasses.controls">
