--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -1,12 +1,12 @@
 <script type="text/html" id="survey-question-signaturepad">
-    <div data-bind="css: question.cssClasses.root, style: { width: question.renderedWidth }">
+    <div data-bind="css: question.cssClasses.root, style: { width: question.renderedCanvasWidth }">
         <div data-bind="css: question.cssClasses.placeholder, visible: $data.needShowPlaceholder()">
             <!-- ko template: { name: 'survey-string', data: question.locPlaceholder } -->
             <!-- /ko -->
         </div>
         <div>
             <!-- ko if: question.backgroundImage -->
-            <img data-bind="attr: { src: question.backgroundImage}, style: { width: question.renderedWidth }, css: question.cssClasses.backgroundImage">
+            <img data-bind="attr: { src: question.backgroundImage}, style: { width: question.renderedCanvasWidth }, css: question.cssClasses.backgroundImage">
             <!-- /ko -->
             <canvas tabindex='0' data-bind="css: question.cssClasses.canvas" ></canvas>
         </div>
