--- a/src/defaultV2-theme/defaultV2.m600.scss
+++ b/src/defaultV2-theme/defaultV2.m600.scss
@@ -8,6 +8,7 @@
   --sd-base-padding: calc(3 * #{$base-unit});
   --sd-base-vertical-padding: calc(2 * #{$base-unit});
   --sd-page-vertical-padding: calc(2 * #{$base-unit});
+  --sjs-mobile-font-editorfont-size: Max(16px, #{$font-default-editorfont-size});
 }
 
 .sd-root-modern {
