--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -102,7 +102,8 @@ $font-editorfont-family: var(--sjs-font-editorfont-family, #{$font-family});
 $font-editorfont-weight: var(--sjs-font-editorfont-weight, 400);
 $font-editorfont-color: var(--sjs-font-editorfont-color, var(--sjs-general-forecolor, rgba(0, 0, 0, 0.91)));
 $font-editorfont-placeholdercolor: var(--sjs-font-editorfont-placeholdercolor, var(--sjs-general-forecolor-light, var(--foreground-light, #909090)));
-$font-editorfont-size: var(--sjs-font-editorfont-size, $font-size);
+$font-default-editorfont-size: var(--sjs-font-editorfont-size, $font-size);
+$font-editorfont-size: var(--sjs-mobile-font-editorfont-size, #{$font-default-editorfont-size});
 $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
 @function multiply($a, $b) {
