--- a/src/defaultV2-theme/blocks/sd-completedpage.scss
+++ b/src/defaultV2-theme/blocks/sd-completedpage.scss
@@ -2,6 +2,7 @@
 
 .sd-completedpage,
 .sd-completed-before-page {
+  align-items: center;
   font-family: $font-family;
   font-weight: bold;
   box-sizing: border-box;
