--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -1,14 +1,14 @@
 <script type="text/html" id="survey-question-signaturepad">
-    <div data-bind="css: question.cssClasses.root, style: { height: signatureHeight, width: signatureWidth }">
+    <div data-bind="css: question.cssClasses.root, style: { width: question.renderedCanvasWidth }">
         <div data-bind="css: question.cssClasses.placeholder, visible: $data.needShowPlaceholder()">
             <!-- ko template: { name: 'survey-string', data: question.locPlaceholder } -->
             <!-- /ko -->
         </div>
         <div>
             <!-- ko if: question.backgroundImage -->
-            <img data-bind="attr: { src: question.backgroundImage, width: question.signatureWidth, height: question.signatureHeight }, css: question.cssClasses.backgroundImage">
+            <img data-bind="attr: { src: question.backgroundImage}, style: { width: question.renderedCanvasWidth }, css: question.cssClasses.backgroundImage">
             <!-- /ko -->
-            <canvas tabindex='0' data-bind="css: question.cssClasses.canvas"></canvas>
+            <canvas tabindex='0' data-bind="css: question.cssClasses.canvas" ></canvas>
         </div>
         <!-- ko if: question.canShowClearButton -->
         <div data-bind="css: question.cssClasses.controls">
