#7189 Update the Completed Before page - angular fix Fixes #7189

--- a/packages/survey-angular-ui/src/survey-content.component.html
+++ b/packages/survey-angular-ui/src/survey-content.component.html
@@ -26,7 +26,7 @@
           </div>
           <ng-template [component]="{ name: 'sv-components-container', data: { survey: model, container: 'footer', needRenderWrapper: false } }"></ng-template>
           <div *ngIf="model.state === 'completed' && model.showCompletedPage" [class]="model.completedCss"
-            [innerHtml]="model.processedCompletedHtml"></div>
+            [innerHtml]="model.processedCompletedHtml | safeHtml"></div>
           <ng-template *ngIf="model.state === 'completed' && model.showCompletedPage" [component]="{ name: 'sv-components-container', data: { survey: model, container: 'completePage' } }"></ng-template>
           <div *ngIf="model.state === 'completedbefore'" [class]="model.completedBeforeCss"
             [innerHtml]="model.processedCompletedBeforeHtml"></div>
