#7219 - fix signature scaling

--- a/src/signaturepad.scss
+++ b/src/signaturepad.scss
@@ -29,6 +29,7 @@
 .sjs_sp_canvas {
     position: relative;
     max-width: 100%;
+    display: block;
 }
 .sjs_sp__background-image {
     position: absolute;
