--- a/packages/survey-angular-ui/src/comment-other.component.html
+++ b/packages/survey-angular-ui/src/comment-other.component.html
@@ -4,6 +4,7 @@
   [disabled]="question.isInputReadOnly"
   (change)="onOtherValueChange($event)"
   (input)="onOtherValueInput($event)"
+  (compositionupdate)="model.onCompositionUpdateOtherValue($event)"
   [class]="question.cssClasses.other">
 </textarea>
 <div *ngIf="question.isReadOnlyRenderDiv()">{{ otherValue }}</div>
