--- a/packages/survey-angular-ui/src/comment.component.html
+++ b/packages/survey-angular-ui/src/comment.component.html
@@ -4,6 +4,7 @@
   [disabled]="question.isInputReadOnly"
   (change)="question.onCommentChange($event)"
   (input)="question.onCommentInput($event)"
+  (compositionupdate)="model.onCompositionUpdateComment($event)"
   [class]="question.cssClasses.other">
 </textarea>
 <div *ngIf="question.isReadOnlyRenderDiv()">{{ question.comment }}</div>
