#7305 Autocomplete doesn't work correctly in dropdown Fixes #7305

--- a/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
+++ b/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
@@ -15,6 +15,7 @@
       [attr.id]="question.getInputId()"
       [class]="question.cssClasses.filterStringInput"
       [attr.inputmode]="model.inputMode"
+      [readonly]="model.filterReadOnly"
       [attr.role]="model.filterStringEnabled ? question.ariaRole : null"
       [attr.readonly]="!model.searchEnabled ? true : null"
       [attr.disabled]="question.isInputReadOnly ? true : null"
