--- a/src/knockout/components/dropdown/dropdown.html
+++ b/src/knockout/components/dropdown/dropdown.html
@@ -5,7 +5,7 @@
     attr: { 
       id: question.inputId, 
       required: question.isRequired, 
-      tabindex: model.inputReadOnly ? undefined : 0,
+      tabindex: model.noTabIndex ? undefined : 0,
       disabled: question.isInputReadOnly,
       role: question.ariaRole,
       'aria-required': question.ariaRequired, 
@@ -46,9 +46,9 @@
         'aria-label': question.a11y_input_ariaLabel,
         'aria-labelledby': question.a11y_input_ariaLabelledBy,
         placeholder: model.placeholderRendered, 
-        readonly: !model.searchEnabled, 
+        readonly: model.filterReadOnly || undefined, 
         role: model.filterStringEnabled ? question.ariaRole : undefined,
-        tabindex: model.inputReadOnly ? undefined : -1,
+        tabindex: model.noTabIndex ? undefined : -1,
         disabled: question.isInputReadOnly,
         id: question.getInputId(), 
         inputmode: model.inputMode
