#7311 Multiple Questions in a Row - An extra padding appears on the left side of a row when questionsOnPageMode is singlePage Fixes #7311

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -49,7 +49,7 @@
   }
 }
 
-.sd-panel {
+.sd-panel:not(.sd-panel--as-page) {
   .sd-row--multiple {
     row-gap: var(--sd-base-vertical-padding);
 
