--- a/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
+++ b/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
@@ -16,7 +16,7 @@
       [class]="question.cssClasses.filterStringInput"
       [attr.inputmode]="model.inputMode"
       [attr.role]="model.filterStringEnabled ? question.ariaRole : null"
-      [attr.readonly]="!model.searchEnabled ? true : null"
+      [attr.readonly]="model.filterReadOnly ? true : null"
       [attr.disabled]="question.isInputReadOnly ? true : null"
       [attr.size]="!model.inputStringRendered ? 1 : null"
       [attr.aria-label]="question.a11y_input_ariaLabel"
