#7356 Error message location Fixes #7356

--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -129,6 +129,8 @@
   padding-bottom: var(--sd-base-padding);
   background: $question-background;
   box-shadow: $shadow-small;
+  display: flex;
+    flex-direction: column;
 }
 
 //compact styles
