#7356 - fix base padding

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -71,7 +71,7 @@
 
 .sd-element--with-frame {
   &.sd-question--title-top {
-    padding-top: var(--sd-base-vertical-padding)
+    padding-top: var(--sd-base-padding)
   }
 
   &.sd-question--error-top {
