--- a/packages/survey-angular-ui/src/components/tagbox/tagbox.component.html
+++ b/packages/survey-angular-ui/src/components/tagbox/tagbox.component.html
@@ -9,7 +9,7 @@
         [attr.aria-activedescendant]="dropdownModel.ariaActivedescendant">
         <div [class]="model.cssClasses.controlValue">
             <ng-container *ngIf="!model.isEmpty()">
-                <sv-ng-tagbox-item *ngFor="let item of model.selectedChoices" [item]="item" [question]="model">
+                <sv-ng-tagbox-item *ngFor="let item of model.renderedSelectedItems" [item]="item" [question]="model">
                 </sv-ng-tagbox-item>
             </ng-container>
             <ng-template [component]="{ name: 'sv-tagbox-filter', data: { model: dropdownModel, question: model } }"></ng-template>
