--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -52,7 +52,7 @@
   box-sizing: border-box;
   min-width: calcSize(6);
   text-align: center;
-  border: 2px solid transparent;
+  border: none;
   color: $foreground;
   fill: $foreground;
   font-size: calcFontSize(1);
@@ -72,7 +72,7 @@ legend+sv-ng-rating-item+.sd-rating__item {
 .sd-rating__item--error {
   background-color: $red-light;
   box-shadow: 0px 1px 2px transparent;
-  border-color: transparent;
+  border: none;
 }
 
 .sd-rating__item.sd-rating__item--disabled {
@@ -84,7 +84,7 @@ legend+sv-ng-rating-item+.sd-rating__item {
   color: $primary-foreground;
   fill: $foreground;
   background-color: $background-semitransparent;
-  border-color: transparent;
+  border: none;
 }
 
 .sd-question--disabled .sd-rating__item-text {
@@ -93,16 +93,15 @@ legend+sv-ng-rating-item+.sd-rating__item {
 
 .sd-rating__item--allowhover:hover {
   background-color: $background-dark;
-  border-color: $background-dark;
 }
 
 .sd-rating__item:focus-within {
-  border-color: $primary;
+  border: 2px solid $primary;
 }
 
 .sd-rating__item--selected {
   background-color: $primary;
-  border-color: $primary;
+  border: 2px solid $primary;
   color: $primary-foreground;
   font-weight: 600;
   box-shadow: 0px 1px 2px transparent;
@@ -153,7 +152,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 
 .sd-rating__item-smiley--error {
   background-color: $red-light;
-  border-color: transparent;
+  border: none;
   fill: $foreground-light;
 
   &.sd-rating__item-smiley--scale-colored:not(.sd-rating__item-smiley--selected) {
@@ -172,16 +171,16 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 
 .sd-rating__item-smiley--allowhover:hover {
   background-color: $background-dark;
-  border-color: $border;
+  border: 2px solid $border;
 }
 
 .sd-rating__item-smiley:focus-within {
-  border-color: $primary;
+  border: 2px solid $primary;
 }
 
 .sd-rating__item-smiley--selected {
   background-color: $primary;
-  border-color: $primary;
+  border: 2px solid $primary;
   fill: $primary-foreground;
   font-weight: 600;
 }
