--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -3,6 +3,7 @@
 
 @import "blocks/sd-element.scss";
 @import "blocks/sd-question.scss";
+@import "blocks/sd-error.scss";
 @import "blocks/sd-collapsed-element.scss";
 @import "blocks/sd-complex-element.scss";
 @import "blocks/sd-input.scss";
