--- a/src/knockout/templates/page.html
+++ b/src/knockout/templates/page.html
@@ -9,6 +9,8 @@
       <!-- /ko -->
     </div>
     <!-- /ko -->
+    <!-- ko template: { name: 'survey-question-errors', data: $data, as: 'question' } -->
+    <!-- /ko -->
     <!-- ko template: { name: 'survey-rows', data: $data} -->
     <!-- /ko -->
   </div>
