--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -156,7 +156,7 @@
   border: none;
   padding: 0 calcSize(1);
 
-  .sd-question__erbox--outside-question {
+  .sd-question__erbox {
     margin: 0;
   }
 }
