Work for https://github.com/surveyjs/service/issues/1637 - Background image reveals some empty spaces - try to fix vr-tests

--- a/src/defaultV2-theme/blocks/sd-body.scss
+++ b/src/defaultV2-theme/blocks/sd-body.scss
@@ -1,6 +1,8 @@
 @import "../defaultV2-theme/mixins.scss";
+
 .sd-body {
   width: 100%;
+  box-sizing: border-box;
 
   .sd-body__page {
     min-width: min(100%, 300px);
